test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_const_decls.draco
int a = 1, z = 9;

proc main() void : a := 1; corp;
