test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_enum_as_identifier.draco
int enum;
 
proc main() void : a := 1; corp;
